--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
 spring.application.name=spring-boot-jwt-postgresql-roles
+server.port=8088
+
+# Database
+## your_database
+spring.datasource.url=jdbc:postgresql://localhost:5432/jwt-roles
+## your_username
+spring.datasource.username=postgres
+## your_password
+spring.datasource.password=raja2010
+
+# JPA
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# JWT Configuration
+jwt.secret=your-super-secret-key-that-should-be-at-least-256-bits-long-for-HS256
+jwt.expiration=86400000
